# cppbase

./: .gitignore  Makefile.am  Makefile.am.checkstyle  Makefile.am.coverage  README.md  configure.ac
scripts/: cpplint.py
src/: main.cc  test.cc  test.h
src/seagull/: test.h
src/seegull/: test.h
tests/: Makefile.am  test1.cc
