AC_INIT([seegull], [0.1.0], [attila.gobi@gmail.com])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_CONFIG_SRCDIR([src/test.cc])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX
AM_PROG_AR

LT_INIT
#AC_CONFIG_SUBDIRS()
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
